2005-01-20
	PR 82964
	* icons/full/cview16/view_menu.gif
	* src/org/eclipse/cdt/internal.ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/actions/ActionMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CSourceViewer.java
	* src/org/eclipse/cdt/internal/ui/text/CCodeScanner.java
	* src/org/eclipse/cdt/internal/ui/text/COperatorRule.java
	* src/org/eclipse/cdt/internal/ui/text/COutlineInformationControl.java
	* src/org/eclipse/cdt/internal/ui/text/CSourceViewerConfiguration.java
	* src/org/eclipse/cdt/internal/ui/text/contenassist/CCompletionProcessor.java

2005-01-19 Alain Magloire
	PR 83151
	* src/org/eclipse/cdt/ui/CElementContentProvider.java

2005-01-11 David Inglis
	Further fix to 36837
	
	* src/org/eclipse/cdt/internal/ui/util/ResourceToItemsMapper.java
	
2005-01-11 David Inglis

	Fix for 82516
	
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementLabels.java
	

2005-01-07 Alain Magloire
	Part of Fix 82323.
	The "New" action was not shown when workspace was empty
	or no selection.
	* src/org/eclipse/cdt/internal/ui/cview/MainActionGroup.java
	And make sure we do not put problem icons on resources that !exist() && isReadOnly().
	* src/org/eclipse/cdt/internal/ui/util/ResourceToItemsMapper.java
	
2005-01-07 Alain Magloire
	Fix PR 82202
	* src/org/eclipse/cdt/internal/ui/cview/CViewDropAdapter.java
	* src/org/eclipse/cdt/internal/ui/editor/DocumentAdapter.java
	* src/org/eclipse/cdt/internal/ui/util/Resources.java

2004-12-22 Alain Magloire

	On going work to clean cdt.ui from misc. warnings
	and removing the deprecated interfaces in Eclipse-3.1

2004-12-21 Alain Magloire
	We use TogglePresentation action definition ID rather the one
	define in the CDT, since now the platfrom defines one.
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorActionContributor.java
	* src/org/eclipse/cdt/internal/ui/editor/ICEditorActionDefinitionIds.java